--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@neondatabase/serverless": "^0.9.4",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.32.1",
+    "lucide-react": "^0.419.0",
     "next": "14.2.5",
     "next-auth": "5.0.0-beta.20",
     "react": "^18",
