--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migration:generate": "drizzle-kit generate --config=drizzle.config.ts",
+    "migration:run": "drizzle-kit migrate",
+    "migration:drop": "drizzle-kit drop --config=drizzle.config.ts",
+    "db:push": "drizzle-kit push:pg --config=drizzle.config.ts",
+    "studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^1.4.2",
     "@neondatabase/serverless": "^0.9.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -18,6 +24,7 @@
     "lucide-react": "^0.419.0",
     "next": "14.2.5",
     "next-auth": "5.0.0-beta.20",
+    "postgres": "^3.4.4",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.4.0",
@@ -27,6 +34,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "dotenv": "^16.4.5",
+    "drizzle-kit": "^0.23.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
