--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "migration:generate": "drizzle-kit generate --config=drizzle.config.ts",
     "migration:run": "drizzle-kit migrate",
     "migration:drop": "drizzle-kit drop --config=drizzle.config.ts",
-    "db:push": "drizzle-kit push:pg --config=drizzle.config.ts",
+    "db:push": "drizzle-kit push --config=drizzle.config.ts",
     "studio": "drizzle-kit studio"
   },
   "dependencies": {
